[gd_scene load_steps=2 format=3 uid="uid://c6m1gdj1aivdc"]

[ext_resource type="Script" path="res://Overlap/hurtbox.gd" id="1_j8c8p"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_j8c8p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibility_ended" from="." to="." method="_on_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
